Fix arrow in dark mode

--- a/src/components/Bar.module.css
+++ b/src/components/Bar.module.css
@@ -28,7 +28,7 @@
     background: rgba(0, 0, 0, 0.5);
     width: 2.755vw;
     height: 10.29375vw;
-    color: var(--primary-color);
+    color: white;
     font-size: 2vw;
 
     justify-content: center;
